# CameraManager

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: camera_managerConfig.cmake.in
examples/cmake_example/: CMakeLists.txt  build.sh
examples/cmake_example/src/: example.cpp
examples/conan_example/: CMakeLists.txt  build.sh  conanfile.py
examples/conan_example/src/: example.cpp
include/: CamerManager.hpp
src/: CameraManager.cpp
